feat: add SwiftCode & Country REST controllers and refactor services, dto, mapper & tests